# bnu-history-120

./: .gitignore  api.py  core.py  install-deps.py  main.py  models.py  netlify.toml  package.json  pages.py  person.py  pyproject.toml  readme.md  ssg.py  tools.py  uno.config.js  vercel.json
api/: chat.js  importmap.json
app/: __init__.py  api.py  data.py  misc.py  models.py  pages.py  seo.py
data/: normalize.py
data/北师大/: index.md
data/北师大/教师/: 万方祥.md  严楚江.md  何日章.md  何炳松.md  余嘉锡.md  余天休.md  侯外庐.md  傅种孙.md  傅铜.md  冯陈祖怡.md  刘拓.md  刘玉峰.md  刘盼遂.md  包桂濬.md  叶丁易.md  吴承仕.md  宋君复.md  张天麟.md  张宗炳.md  张星烺.md  张耀翔.md  张贻侗.md  徐祖正.md  徐英超.md  方万邦.md  曾绍舆.md  朱希亮.md  李大钊.md  李长之.md  李顺卿.md  李飞生.md  杨大钧.md  杨宗翰.md  杨树达.md  梁实秋.md  武兆发.md  殷祖英.md  汪堃仁.md  汪懋祖.md  沈步洲.md  (+50 more)
data/北师大/校友/: 丁作霖.md  万方祥.md  何日章.md  侯外庐.md  俞德浚.md  傅种孙.md  公木.md  冯成麟.md  冯祖荀.md  刘世楷.md  刘培桐.md  包桂濬.md  匡互生.md  叶丁易.md  吴品三.md  吴奔星.md  吴富恒.md  周小舟.md  周谷城.md  夏宇众.md  孙楷第.md  孙永生.md  宋春青.md  张云波.md  张岱年.md  张我军.md  张耀曾.md  徐英超.md  方万邦.md  李蒸.md  李达.md  杜斌丞.md  杨占升.md  杨明轩.md  杨秀峰.md  杨绍萱.md  柯璜.md  柴德赓.md  楚图南.md  殷祖英.md  (+34 more)
data/北师大/校长/: 刘廷琛.md  张亨嘉.md  张百熙.md  张贻惠.md  徐旭生.md  朱益藩.md  李家驹.md  李建勋.md  李燕.md  李石曾.md  林砺儒.md  梁启超.md  汤璪真.md  范源廉.md  邓萃英.md  陈垣.md  陈宝泉.md  陈映璜.md  陈裕光.md  陈问咸.md  黎锦熙.md
data/女高师/: index.md
data/女高师/教师/: 刘师培.md  (+13 more)
data/辅大/: index.md
netlify/: denoImportMap.json
netlify/edge-functions/: chat.js
static/: api.html  article_view.html  common-dark.css  common-light.css  common.css  div_article.xml  index.html  manifest.json  patches.js  person.html  preload.js  sitemap.xml  sw.js  tooltip.css
templates/: More.jinja2  head-links.jinja2  index.jinja2  person.jinja2  register-sw.jinja2
(+93 files in other folders)
