[project]
name = "bnu-history-120"
version = "0.1.0"
description = ""
authors = [{ name = "Muspi Merol", email = "admin@muspimerol.site" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.103.2",
    "markdown2>=2.4.10",
    "rjsmin>=1.2.2",
    "rcssmin>=1.1.2",
    "loguru>=0.7.2",
    "promplate[openai]~=0.2.2.9",
    "brotli-asgi>=1.4.0",
]

[tool.black]
line-length = 100

[tool.isort]
line_length = 1000
