[project]
name = "bnu-history-120"
version = "0.1.0"
description = ""
authors = [{ name = "Muspi Merol", email = "admin@muspimerol.site" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]~=0.118.3",
    "markdown2~=2.5.4",
    "rjsmin~=1.2.5",
    "rcssmin~=1.2.2",
    "loguru~=0.7.3",
    "promplate[openai]~=0.2.2.9",
    "zstd-asgi~=1.0",
    "httpx~=0.28.1",
]

[tool.black]
line-length = 100

[tool.isort]
line_length = 1000
